--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <style>
+  * { box-sizing: border-box; }
+
 body {
   font-family: Arial, sans-serif;
   background: linear-gradient(135deg, #ff9acb, #ffc1dd);
@@ -181,4 +183,5 @@ suryaflu.addEventListener("change", () => {
 
 </body>
 </html>
+
 
