--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+ini yang berhasil 
+
 <!DOCTYPE html>
 <html lang="id">
 <head>
@@ -6,6 +8,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <style>
+ 
   * { box-sizing: border-box; }
 
 body {
@@ -97,7 +100,7 @@ button {
   </div>
 
   <div class="content">
-    <h2>Isi Formulir Pendaftaran</h2>
+    <h2>FORMULIR PENDAFTARAN</h2>
 
     <form id="regForm">
 
@@ -123,7 +126,22 @@ button {
       <label>Alamat Lengkap</label>
       <textarea name="alamat" required></textarea>
 
-      <label>Bergabung ke @Suryafluencers?</label>
+      <label>Apakah kamu ingin bergabung ke komunitas @Suryafluencers?</label>
+
+      <div class="desc">
+        <b>@Suryafluencers</b> adalah program Creator & Reviewer Suryatokoku bagi Content Creator yang ingin berkolaborasi melalui pembuatan konten, event/campaign, dan review produk.
+        <br><br>
+        <b>Keuntungan:</b>
+        <ul>
+          <li>Akses early info event & campaign</li>
+          <li>Extra Point Member Suryatokoku</li>
+          <li>Special Goodie Bag</li>
+          <li>Sampel produk gratis untuk review</li>
+          <li>Membangun personal branding sebagai KOL</li>
+        </ul>
+        <b>@Suryafluencers</b> bukan hanya tentang review, tapi kolaborasi jangka panjang & pertumbuhan creator.
+      </div>
+
       <select name="suryaflu" id="suryaflu" required>
         <option value="">-- Pilih --</option>
         <option value="Ya">Ya, Mau Bergabung</option>
@@ -183,5 +201,6 @@ suryaflu.addEventListener("change", () => {
 
 </body>
 </html>
+
 
 
