--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ body {
 }
 
 }
-.content { padding: 22px; }
+.content { padding: 28px 32px; }
 h2 {
   text-align: center;
   color: #e91e63;
@@ -199,6 +199,7 @@ suryaflu.addEventListener("change", () => {
 
 </body>
 </html>
+
 
 
 
