--- a/index.html
+++ b/index.html
@@ -6,22 +6,22 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <style>
- 
   * { box-sizing: border-box; }
-
 body {
   font-family: Arial, sans-serif;
   background: linear-gradient(135deg, #ff9acb, #ffc1dd);
   padding: 20px;
 }
+
 .box {
   max-width: 650px;
-  background: #fff;
+  background: #ffffff;
   margin: auto;
   border-radius: 16px;
   overflow: hidden;
   box-shadow: 0 12px 30px rgba(0,0,0,.18);
 }
+
 .header {
   text-align: center;
   padding: 20px;
@@ -35,32 +35,40 @@ body {
   display: inline-block;
 }
 
-}
-.content { padding: 28px 32px; }
+.content { padding: 22px; }
+
 h2 {
   text-align: center;
   color: #e91e63;
   margin-bottom: 22px;
 }
+
 label {
   font-weight: bold;
   margin-top: 14px;
   display: block;
 }
+
 input, select, textarea {
   width: 100%;
   padding: 11px;
   margin-top: 6px;
   border-radius: 8px;
   border: 1px solid #ccc;
+  font-size: 14px;
 }
+
+textarea { resize: vertical; }
+
 .desc {
   font-size: 13px;
   background: #fff0f7;
   padding: 14px;
   border-radius: 8px;
   margin-top: 10px;
+  line-height: 1.6;
 }
+
 button {
   width: 100%;
   background: #e91e63;
@@ -72,7 +80,11 @@ button {
   border-radius: 10px;
   cursor: pointer;
 }
+
+button:hover { background: #d81b60; }
+
 .hidden { display: none; }
+
 .loading {
   position: fixed;
   inset: 0;
@@ -84,12 +96,6 @@ button {
   font-weight: bold;
   color: #e91e63;
   z-index: 999;
-}
-
- @media (max-width: 480px) {
-  .content {
-    padding: 24px 20px;
-  }
 }
 
 </style>
@@ -206,6 +212,7 @@ suryaflu.addEventListener("change", () => {
 
 </body>
 </html>
+
 
 
 
