--- a/index.html
+++ b/index.html
@@ -140,18 +140,29 @@ button:hover { background: #d81b60; }
       <label>Apakah kamu ingin bergabung ke komunitas @Suryafluencers?</label>
 
       <div class="desc">
-        <b>@Suryafluencers</b> adalah program Creator & Reviewer Suryatokoku bagi Content Creator yang ingin berkolaborasi melalui pembuatan konten, event/campaign, dan review produk.
-        <br><br>
-        <b>Keuntungan:</b>
-        <ul>
-          <li>Akses early info event & campaign</li>
-          <li>Extra Point Member Suryatokoku</li>
-          <li>Special Goodie Bag</li>
-          <li>Sampel produk gratis untuk review</li>
-          <li>Membangun personal branding sebagai KOL</li>
-        </ul>
-        <b>@Suryafluencers</b> bukan hanya tentang review, tapi kolaborasi jangka panjang & pertumbuhan creator.
-      </div>
+  <b>@suryafluencers</b> adalah community micro influencer yang tumbuh bersama
+  <b>Suryatokoku</b>. Bukan sekadar reviewer, tapi partner dan keluarga Suryatokoku.
+  <br><br>
+
+  <b>Syarat:</b>
+  <ol>
+    <li>Wajib follow Instagram <b>@suryatokoku.id</b>, <b>@suryafluencers</b> dan TikTok <b>@suryatokoku.id</b></li>
+    <li>Tergabung dalam member ecer Suryatokoku</li>
+    <li>Domisili Cirebon, Ciledug, dan wilayah sekitarnya</li>
+    <li>Followers minimal <b>1000+</b> dan akun bersifat publik</li>
+    <li>Aktif membuat konten di media sosial</li>
+    <li>Ikut serta dalam event & campaign yang diadakan oleh Suryatokoku</li>
+  </ol>
+
+  <b>Sebagai bagian dari komunitas ini, Sunshine berkesempatan untuk:</b>
+  <ol>
+    <li>Mendapatkan early information terkait event atau campaign Suryatokoku</li>
+    <li>Mendapatkan poin setiap kali belanja</li>
+    <li>Mendapatkan poin setiap mengikuti kegiatan</li>
+    <li>Special goodie bag untuk member aktif di setiap periode</li>
+  </ol>
+</div>
+
 
       <select name="suryaflu" id="suryaflu" required>
         <option value="">-- Pilih --</option>
@@ -219,6 +230,7 @@ suryaflu.addEventListener("change", () => {
 
 </body>
 </html>
+
 
 
 
