--- a/index.html
+++ b/index.html
@@ -111,7 +111,13 @@ button:hover { background: #d81b60; }
   </div>
 
   <div class="content">
-    <h2>FORMULIR PENDAFTARAN</h2>
+    <p class="event-desc">
+  <b>Carnival Big Sale Suryatokoku Vol.1</b> hadir dengan segudang
+  <b>Promo Spesial</b>, <b>Diskon Besar</b>, <b>Free Produk di jam tertentu</b>,
+  <b>Games Berhadiah</b>, dan berbagai <b>Activity Seru</b> yang sayang untuk dilewatkan!
+</p>
+
+<h2>FORMULIR PENDAFTARAN</h2>
 
     <form id="regForm">
 
@@ -230,6 +236,7 @@ suryaflu.addEventListener("change", () => {
 
 </body>
 </html>
+
 
 
 
