--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
 <meta charset="UTF-8">
-<title>Formulir Pendaftaran Suryatokoku</title>
+<title>Formulir Pendaftaran Carnival Big Sale Suryatokoku</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <style>
@@ -14,7 +14,7 @@ body {
 }
 
 .box {
-  max-width: 450px;
+  max-width: 650px;
   background: #ffffff;
   margin: auto;
   border-radius: 16px;
@@ -236,6 +236,7 @@ suryaflu.addEventListener("change", () => {
 
 </body>
 </html>
+
 
 
 
