--- a/success.html
+++ b/success.html
@@ -46,6 +46,21 @@ h2 {
   margin-top: 10px;
   font-weight: bold;
 }
+
+  .ig {
+  margin-top: 6px;
+}
+
+.ig a {
+  color: #e91e63;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+.ig a:hover {
+  text-decoration: underline;
+}
+
 </style>
 </head>
 
@@ -66,14 +81,20 @@ h2 {
 
   <div id="qrcode" class="qr"></div>
 
-  <p>
-  Ikuti info terbaru kami di Instagram<br>
-  <a href="https://www.instagram.com/suryatokoku.id/" 
-     target="_blank" 
-     class="ig-link">
-     @suryatokoku.id
-  </a>
-</p>
+ <div class="note">
+  Ikuti info terbaru kami di Instagram
+  <div class="ig">
+    <a href="https://www.instagram.com/suryatokoku.id/" target="_blank">
+      @suryatokoku.id
+    </a>
+  </div>
+  <div class="ig">
+    <a href="https://www.instagram.com/suryafluencers/" target="_blank">
+      @suryafluencers
+    </a>
+  </div>
+</div>
+
 
 
 <script>
