--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@ h2 {
   text-align: center;
   color: #e91e63;
   margin-bottom: 22px;
+  font-size: 22px;
 }
+
 
 label {
   font-weight: bold;
@@ -236,6 +238,7 @@ suryaflu.addEventListener("change", () => {
 
 </body>
 </html>
+
 
 
 
