--- a/success.html
+++ b/success.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Pendaftaran Berhasil</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
@@ -94,15 +95,30 @@ h2 {
 
   <b>Syarat mendapatkan Gratis Produk Skincare:</b><br><br>
 
-  1️⃣ Follow akun Instagram 👉
-  <a href="https://www.instagram.com/suryatokoku.id" target="_blank">
-    <b>@suryatokoku.id</b>
-  </a><br><br>
+<p>
+<i class="fab fa-instagram" style="color:#E1306C;"></i>
+Follow Instagram →
+<a href="https://www.instagram.com/suryatokoku.id" target="_blank">
+  <b>@suryatokoku.id</b>
+</a>
+</p>
 
-  2️⃣ Follow akun TikTok 👉
-  <a href="https://www.tiktok.com/@suryatokoku.id" target="_blank">
-    <b>@suryatokoku.id</b>
-  </a><br><br>
+<p>
+<i class="fab fa-instagram" style="color:#E1306C;"></i>
+Follow Instagram →
+<a href="https://www.instagram.com/suryafluencers" target="_blank">
+  <b>@suryafluencers</b>
+</a>
+</p>
+
+<p>
+<i class="fab fa-tiktok" style="color:#000;"></i>
+Follow TikTok →
+<a href="https://www.tiktok.com/@suryatokoku.id" target="_blank">
+  <b>@suryatokoku.id</b>
+</a>
+</p>
+
 
   📸 <b>Screenshot</b> dan tunjukkan juga <b>bukti follow</b> akun official kami
   kepada <b>Staff Suryatokoku</b>.
