--- a/success.html
+++ b/success.html
@@ -111,7 +111,7 @@ h2 {
   <h2>Pendaftaran Berhasil 🎉</h2>
 
   <div class="desc">
-  Terima kasih telah melakukan pendaftaran.<br><br>
+  Terima kasih telah melakukan pendaftaran.<br>
 
   <div class="desc left">
   Silakan <b>screenshot QR Code</b> di bawah ini dan tunjukkan kepada
@@ -119,13 +119,12 @@ h2 {
   <b>Freebies Skincare (Produk Skincare Gratis)</b>.
   <br><br>
 
-  🎁 Freebies hanya berlaku untuk <b>100 orang pertama setiap hari ditanggal</b>
-  📅 <b>29 – 31 Desember 2025</b><br>
+  🎁 Freebies hanya berlaku untuk <b>100 orang pertama setiap hari ditanggal 29 – 31 Desember 2025</b><br>
   </div>
 
   <hr style="margin:16px 0">
 
-  <b>Syarat mendapatkan Gratis Produk Skincare:</b><br><br>
+  <b>Syarat mendapatkan Gratis Produk Skincare:</b><br>
 
 <div class="follow-line">
   <i class="fab fa-instagram ig"></i>
