--- a/success.html
+++ b/success.html
@@ -150,7 +150,7 @@ h2 {
   </a>
 </div>
 
-
+<div class="follow-line">
   📸 <b>Screenshot</b> dan tunjukkan juga <b>bukti follow</b> akun official kami
   kepada <b>Staff Suryatokoku</b>.
 </div>
