--- a/success.html
+++ b/success.html
@@ -159,7 +159,7 @@ h2 {
 
 <div class="follow-note">
   📸 <b>Screenshot</b> dan tunjukkan juga <b>bukti follow</b> akun official kami
-  kepada <b>Staff Suryatokoku</b>.
+  kepada <b>Staff kami</b>.
 </div>
 
   <div id="qrcode" class="qr"></div>
@@ -182,8 +182,8 @@ const qrText = nama + "\t" + wa;
 // Generate QR Code
 new QRCode(document.getElementById("qrcode"), {
   text: qrText,
-  width: 220,
-  height: 220
+  width: 180,
+  height: 180
 });
 </script>
 
