--- a/success.html
+++ b/success.html
@@ -100,6 +100,10 @@ h2 {
   color: #000;
 }
 
+.follow-line .maps {
+  color: #34A853;
+}
+
 .follow-note {
   font-size: 14px;
   margin-top: 10px;
@@ -156,6 +160,14 @@ h2 {
   Follow TikTok →
   <a href="https://www.tiktok.com/@suryatokoku.id" target="_blank">
     <b>@suryatokoku.id</b>
+  </a>
+</div>
+
+<div class="follow-line">
+  <i class="fas fa-map-marker-alt maps"></i>
+  Beri rating & review →
+  <a href="https://maps.app.goo.gl/GbxopdCVEVVEkBaQ6" target="_blank">
+    <b>Google Maps Suryatokoku</b>
   </a>
 </div>
 
