--- a/success.html
+++ b/success.html
@@ -123,11 +123,8 @@ h2 {
 <div class="box">
   <h2>Pendaftaran Berhasil 🎉</h2>
 
-  <div class="desc">
-  Terima kasih telah melakukan pendaftaran.<br>
-
   <div class="desc left">
-  Silakan <b>screenshot QR Code</b> di bawah dan tunjukkan kepada
+  Terima kasih telah melakukan pendaftaran, silakan <b>screenshot QR Code</b> di bawah dan tunjukkan kepada
   <b>staff kami</b> untuk mendapatkan
   <b>Freebies Skincare (Produk Skincare Gratis)</b>.
   <br><br>
@@ -165,7 +162,7 @@ h2 {
 
 <div class="follow-line">
   <i class="fas fa-map-marker-alt maps"></i>
-  Beri rating & review Maps →
+  Beri rating 5⭐ & review Maps →
   <a href="https://maps.app.goo.gl/GbxopdCVEVVEkBaQ6" target="_blank">
     <b>Suryatokoku</b>
   </a>
