--- a/success.html
+++ b/success.html
@@ -129,7 +129,7 @@ h2 {
   <b>Freebies Skincare (Produk Skincare Gratis)</b>.
   <br><br>
 
-  🎁 Freebies hanya berlaku untuk <b>100 orang pertama setiap hari ditanggal 29 – 31 Desember 2025</b><br>
+  🎁 Freebies hanya berlaku untuk <b>100 pelanggan pertama yang berkunjung ke toko kami setiap hari selama 29–31 Desember 2025.</b><br>
   </div>
 
   <hr style="margin:16px 0">
