--- a/kasir.html
+++ b/kasir.html
@@ -63,7 +63,7 @@ button {
 <body>
 
 <div class="box">
-  <h2>Kasir Scan QR</h2>
+  <h2>📷 Scan QR Code Customer</h2>
 
   <div id="reader"></div>
 
@@ -152,6 +152,7 @@ function tutupPopup() {
 
 </body>
 </html>
+
 
 
 
