--- a/kasir.html
+++ b/kasir.html
@@ -111,6 +111,17 @@ button {
   color: #1565c0;
 }
 
+.quota {
+  margin-top: 10px;
+  padding: 10px;
+  border-radius: 8px;
+  font-size: 14px;
+  font-weight: bold;
+  background: #fff3e0;
+  color: #e65100;
+  text-align: center;
+}
+
 </style>
 </head>
 
@@ -122,6 +133,8 @@ button {
   <div id="reader"></div>
 
   <div id="result"></div>
+  <div id="quota"></div>
+
 
   <div id="notif"></div>
 </div>
@@ -209,6 +222,14 @@ function prosesScan(nama, wa) {
         <button class="big-btn" onclick="scanUlang()">🔄 Scan Ulang</button>
       `;
 
+      const sisa = Math.max(0, 100 - (res.freebiesHariIni || 0));
+
+document.getElementById("quota").innerHTML = `
+  <div class="quota">
+    🎁 Sisa freebies hari ini: ${sisa}
+  </div>
+`;
+
       document.getElementById(soundId)?.play();
 
       if (res.popup === "KONFIRMASI") {
@@ -254,6 +275,7 @@ function scanUlang() {
 
 </body>
 </html>
+
 
 
 
