--- a/kasir.html
+++ b/kasir.html
@@ -133,6 +133,8 @@ button {
   <div id="reader"></div>
 
   <div id="result"></div>
+<div id="quota"></div>
+  
 
   <div id="notif"></div>
 </div>
@@ -298,6 +300,7 @@ function scanUlang() {
 
 </body>
 </html>
+
 
 
 
