--- a/StaffFreebies.html
+++ b/StaffFreebies.html
@@ -145,7 +145,7 @@ button {
   <div class="popup-box">
     <p id="popupText"></p>
     <button onclick="beriFreebies()">YA</button>
-    <button onclick="tutupPopup()">TIDAK</button>
+    <button onclick="tolakFreebies()">TIDAK</button>
   </div>
 </div>
 
@@ -262,6 +262,8 @@ function beriFreebies() {
     // Hitung ulang sisa freebies (dikurangi 1)
     const sisa = Math.max(0, 100 - ((lastData.freebiesHariIni || 0) + 1));
 
+  
+
     // Update tampilan hasil (SETELAH FREEBIES DIBERIKAN)
 document.getElementById("result").innerHTML = `
   <div><b>Nama :</b> ${lastData.nama}</div>
@@ -291,13 +293,35 @@ document.getElementById("result").innerHTML = `
   });
 }
 
+function tolakFreebies() {
+  // Tutup popup saja
+  document.getElementById("popup").style.display = "none";
 
+  // Tampilkan info (TIDAK reload, TIDAK scan ulang)
+  document.getElementById("result").innerHTML = `
+    <div><b>Nama :</b> ${lastData.nama}</div>
+    <div><b>No. WA :</b> ${lastData.wa}</div>
+    <div><b>Kunjungan ke :</b> ${lastData.totalKunjungan}</div>
+
+    <hr style="margin:10px 0">
+
+    <div><b>Jumlah Customer Hari Ini :</b> ${lastData.jumlahCustomerHariIni ?? "-"}</div>
+
+    <div class="status no center">
+      ❌ FREEBIES TIDAK DIBERIKAN
+    </div>
+
+    <button class="big-btn" onclick="scanUlang()">
+      Scan Customer Berikutnya
+    </button>
+  `;
+}
 
 
 function tutupPopup() {
   document.getElementById("popup").style.display = "none";
-  location.reload();
 }
+
 
 function scanUlang() {
   location.reload();
@@ -311,6 +335,7 @@ function scanUlang() {
 
 </body>
 </html>
+
 
 
 
