--- a/StaffFreebies.html
+++ b/StaffFreebies.html
@@ -146,7 +146,7 @@ button {
 
   <!-- LOGO / HEADER -->
   <div class="header-logo">
-    <img src="header-event.png" alt="Header Event">
+    <img src="newheader-event.png" alt="Header Event">
   </div>
 
   <h2>📷 Scan QR Customer</h2>
@@ -352,6 +352,7 @@ function scanUlang() {
 
 </body>
 </html>
+
 
 
 
